.provarCaches/00D5h000009Q6XQEA0/objects/provar__Coverage_Report__c.object
<CustomObject>
    <fields>
        <fullName>provar__Average_Coverage__c</fullName>
        <formula>IF (provar__Number_of_Metadata_Components__c &gt; 0,
    provar__Sum_of_Coverage__c / provar__Number_of_Metadata_Components__c,
    0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>provar__Coverage_Report_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coverage Report Schedule</label>
        <referenceTo>provar__Coverage_Report_Schedule__c</referenceTo>
        <relationshipLabel>Coverage Reports</relationshipLabel>
        <relationshipName>Coverage_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Coverage_Type__c</fullName>
        <label>Coverage Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Coverage_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>provar__Is_Latest__c</fullName>
        <formula>IF(ISPICKVAL(provar__Coverage_Type__c,&quot;Apex Code&quot;),provar__Report_Date__c = provar__System__r.provar__Latest_Code_Coverage_Report__c,provar__Report_Date__c = provar__System__r.provar__Latest_Flow_Coverage_Report__c)</formula>
        <label>Is Latest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Number_of_Metadata_Components__c</fullName>
        <label>Number of Metadata Components</label>
        <summaryForeignKey>provar__Metadata_Component_Coverage_Report__c.provar__Coverage_Report__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Report_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Report Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>provar__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Sum_of_Coverage__c</fullName>
        <label>Sum of Coverage</label>
        <summarizedField>provar__Metadata_Component_Coverage_Report__c.provar__Coverage__c</summarizedField>
        <summaryForeignKey>provar__Metadata_Component_Coverage_Report__c.provar__Coverage_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__System__c</fullName>
        <label>System</label>
        <referenceTo>provar__System__c</referenceTo>
        <relationshipLabel>Coverage Reports</relationshipLabel>
        <relationshipName>Coverage_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Coverage Report</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__System__c</columns>
        <columns>provar__Report_Date__c</columns>
        <columns>provar__Coverage_Type__c</columns>
        <columns>provar__Average_Coverage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COV-{000000}</displayFormat>
        <label>Coverage Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>